<resources>
    <string name="app_name">Music Player</string>
    <string name="zero">0:00</string>
    <string name="playlists">Playlists</string>
    <string name="folder">Songs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="albums">Albums</string>
    <string name="favorites">Favorites</string>
</resources>