<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_layout"
    android:background="@color/blue">

    <com.google.android.material.tabs.TabLayout
        android:visibility="gone"
        android:id="@+id/tabLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabMode="scrollable"
        app:tabIndicatorColor="@color/red"
        app:tabTextColor="@color/red"
        >
        <com.google.android.material.tabs.TabItem
            android:text="@string/albums"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.tabs.TabItem
            android:text="@string/playlists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.tabs.TabItem
            android:text="@string/folder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.tabs.TabItem
            android:text="@string/favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:visibility="gone"
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
        app:layout_constraintBottom_toTopOf="@id/empty_place"
        />
    <LinearLayout
        android:id="@+id/empty_place"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"/>



    <ImageView
        android:visibility="visible"
        android:id="@+id/btn_close_play_song"
        android:layout_width="30dp"

        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/keyboard_arrow_down_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:tintMode="src_in"
        app:tint="@color/red"
        />

    <ImageView
        android:visibility="visible"
        android:id="@+id/btn_more_play_song"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:tintMode="src_in"
        app:tint="@color/red"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/song_view_image_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="H,1:1"
        android:layout_marginHorizontal="45dp"
        app:layout_constraintBottom_toTopOf="@+id/song_view_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_close_play_song"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="6dp"
        app:cardBackgroundColor="@color/transparent"
        android:outlineAmbientShadowColor="@color/transparent"
        android:outlineSpotShadowColor="@color/transparent">

    <ImageView
        android:id="@+id/song_view_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/placeholder"
        android:scaleType="fitXY"
        />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/song_view_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:text="SONG NAME GOES HERE PLACEHOLDER"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:maxLines="1"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/artist_play_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:text="Artist"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song_view_name"
        android:textColor="@color/white"/>

    <ImageView
        android:id="@+id/btn_favorite_song"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/favorite_24dp_no_fill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artist_play_song"
        android:tintMode="src_in"
        app:tint="@color/red"/>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song_view_name">

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/black"
            android:foregroundTint="@color/red"
            android:progressTint="@color/red"
            android:thumbTint="@color/red" />

        <TextView
            android:id="@+id/currentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/seek_bar"
            android:layout_alignParentStart="true"
            android:layout_marginStart="24dp"
            android:text="@string/zero"
            android:textColor="@color/red"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/totalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/seek_bar"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="24dp"
            android:text="@string/zero"
            android:textColor="@color/red"
            android:textSize="14sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/repeat_outline"
        android:visibility="invisible"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/circle"
        app:layout_constraintBottom_toBottomOf="@+id/btn_repeat"
        app:layout_constraintEnd_toEndOf="@+id/btn_repeat"
        app:layout_constraintStart_toStartOf="@+id/btn_repeat"
        app:layout_constraintTop_toTopOf="@+id/btn_repeat" />

    <ImageView
        android:id="@+id/shuffle_outline"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/circle"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/btn_shuffle"
        app:layout_constraintEnd_toEndOf="@+id/btn_shuffle"
        app:layout_constraintStart_toStartOf="@+id/btn_shuffle"
        app:layout_constraintTop_toTopOf="@+id/btn_shuffle" />

    <ImageView
        android:id="@+id/btn_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="3"
        android:background="@color/transparent"
        android:clickable="true"
        android:contentDescription="Repeat button"
        android:focusable="true"
        android:src="@drawable/repeat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:tint="@color/red"
        android:tintMode="src_in"/>


    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/transparent"
        android:clickable="true"
        android:contentDescription="Skip back button"
        android:focusable="true"
        android:src="@drawable/skip_previous_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_play_pause"
        app:layout_constraintEnd_toStartOf="@+id/btn_play_pause"
        app:layout_constraintStart_toEndOf="@+id/btn_repeat"
        app:layout_constraintTop_toTopOf="@+id/btn_play_pause"
        android:tintMode="src_in"
        app:tint="@color/red"/>

    <ImageView
        android:id="@+id/btn_play_pause"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/transparent"
        android:clickable="true"
        android:contentDescription="Play button"
        android:focusable="true"
        android:src="@drawable/play_arrow_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        android:tintMode="src_in"
        app:tint="@color/red"/>

    <ImageView
        android:id="@+id/btn_next"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@color/transparent"
        android:clickable="true"
        android:contentDescription="Skip forward button"
        android:focusable="true"
        android:src="@drawable/skip_next_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_play_pause"
        app:layout_constraintEnd_toStartOf="@+id/btn_shuffle"
        app:layout_constraintStart_toEndOf="@+id/btn_play_pause"
        app:layout_constraintTop_toTopOf="@+id/btn_play_pause"
        android:tintMode="src_in"
        app:tint="@color/red"/>

    <ImageView
        android:id="@+id/btn_shuffle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@color/transparent"
        android:clickable="true"
        android:contentDescription="Shuffle button"
        android:focusable="true"
        android:src="@drawable/shuffle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:tint="@color/red"
        android:tintMode="src_in"/>

    <LinearLayout
        android:id="@+id/playlist_view_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/empty_place"
        android:orientation="horizontal" />

    <ScrollView
        android:visibility="gone"
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="@id/playlist_view_container"
        app:layout_constraintStart_toStartOf="@id/playlist_view_container"
        app:layout_constraintTop_toTopOf="@id/playlist_view_container"
        app:layout_constraintBottom_toBottomOf="@id/playlist_view_container">


        <RelativeLayout
            android:id="@+id/playlist_elements_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btn_close_playlist"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/baseline_arrow_back_24"
                android:tintMode="src_in"
                app:tint="@color/red"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_marginTop="65dp"
                app:cardCornerRadius="25dp"
                android:layout_centerHorizontal="true"
                >

                <ImageView
                    android:id="@+id/playlist_image"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_centerHorizontal="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/placeholder" />
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/playlist_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-black"
                android:text="PLACEHOLDER"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_below="@id/cardView"
                />
            <TextView
                android:id="@+id/playlist_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/playlist_name"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="8dp"
                android:text="00 songs"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="12sp" />

            <ImageButton
                android:id="@+id/btn_add_song_redirect"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/transparent"
                android:src="@drawable/plus"
                android:tintMode="src_in"
                app:tint="@color/red"
                android:layout_marginEnd="40dp"
                android:layout_below="@+id/playlist_name"/>
            <ImageButton
                android:id="@+id/btn_delete_from_playlist"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_below="@+id/playlist_name"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="40dp"
                android:backgroundTint="@color/transparent"
                android:src="@drawable/delete_24dp"
                android:visibility="gone"
                android:tintMode="src_in"
                app:tint="@color/red" />

            <ImageButton
                android:id="@+id/btn_more_playlist"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:background="@color/transparent"
                android:src="@drawable/baseline_more_vert_24"
                android:tintMode="src_in"
                app:tint="@color/red"
                android:layout_below="@id/playlist_name"
                android:layout_alignParentEnd="true"/>

            <com.example.myapplication.ui_elements.NonScrollListView
                android:id="@+id/playlist_songs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_more_playlist"
                />

        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

